src/objects/Retail_Task__c.object
<CustomObject>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Predelivery inspection</fullName>
                </value>
                <value>
                    <fullName>1year inspection</fullName>
                </value>
                <value>
                    <fullName>MOT</fullName>
                </value>
                <value>
                    <fullName>MB Safety check</fullName>
                </value>
                <value>
                    <fullName>Dealer Campaign</fullName>
                </value>
                <value>
                    <fullName>General Repair</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Outside Order</fullName>
                </value>
                <value>
                    <fullName>Paint Jobs</fullName>
                </value>
                <value>
                    <fullName>Re-Repair</fullName>
                </value>
                <value>
                    <fullName>Quick Service</fullName>
                </value>
                <value>
                    <fullName>Service Transfer</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Service Maintenance</fullName>
                </value>
                <value>
                    <fullName>MB 1year inspection</fullName>
                </value>
                <value>
                    <fullName>First MOT</fullName>
                </value>
                <value>
                    <fullName>Test Jobs</fullName>
                </value>
                <value>
                    <fullName>Electrical Jobs</fullName>
                </value>
                <value>
                    <fullName>Body Jobs</fullName>
                </value>
                <value>
                    <fullName>Other Jobs</fullName>
                </value>
                <value>
                    <fullName>Wear &amp; Tear Jobs</fullName>
                </value>
                <value>
                    <fullName>Return Jobs</fullName>
                </value>
                <value>
                    <fullName>Service Contract</fullName>
                </value>
                <value>
                    <fullName>New car/used car sales</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Used car purchase</fullName>
                </value>
                <value>
                    <fullName>Not selected</fullName>
                </value>
                <value>
                    <fullName>Blank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Contact_Name__c</fullName>
        <label>Service Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Currency__c</fullName>
        <label>Service Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Damage_Code__c</fullName>
        <label>Service Damage Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Damage_Text__c</fullName>
        <label>Service Damage Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Date_In__c</fullName>
        <label>Service Date In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Date_Out__c</fullName>
        <label>Service Date Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail Tasks (Service Dealer)</relationshipLabel>
        <relationshipName>Retail_Tasks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Details__c</fullName>
        <label>Service Details</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Invoice_Number__c</fullName>
        <label>Service Invoice Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Labour_Amount__c</fullName>
        <label>Service Labour Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Mileage__c</fullName>
        <label>Current Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Number__c</fullName>
        <label>Service Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Parts_Amount__c</fullName>
        <label>Service Parts Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Position__c</fullName>
        <label>Service Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Total_Amount__c</fullName>
        <label>Service Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Vehicle_VIN__c</fullName>
        <formula>Service_Vehicle__r.UsVIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Vehicle VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Retail Tasks (Service Vehicle)</relationshipLabel>
        <relationshipName>Retail_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Settlement_Officer__c</fullName>
        <label>Settlement Officer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail Tasks (Signer)</relationshipLabel>
        <relationshipName>Retail_Tasks4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Flag_Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Flag (to exclude)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Flag_Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Flag (to include)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Split_Payment_Comission_Fee__c</fullName>
        <label>Total Interest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Waiting for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>pullback</fullName>
                </value>
                <value>
                    <fullName>Save</fullName>
                </value>
                <value>
                    <fullName>Waiting for cancellation approval</fullName>
                </value>
                <value>
                    <fullName>Cancellation Approved</fullName>
                </value>
                <value>
                    <fullName>In service</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Matured</fullName>
                </value>
                <value>
                    <fullName>Cancelled2</fullName>
                </value>
                <value>
                    <fullName>Early Termination</fullName>
                </value>
                <value>
                    <fullName>Subrogation</fullName>
                </value>
                <value>
                    <fullName>Consent Termination</fullName>
                </value>
                <value>
                    <fullName>Forced Termination</fullName>
                </value>
                <value>
                    <fullName>Change of Owner</fullName>
                </value>
                <value>
                    <fullName>Change Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Product__c</fullName>
        <label>Sub-Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporting_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supporting Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail Tasks (Supporting Dealer)</relationshipLabel>
        <relationshipName>Retail_Tasks6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suspend_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspend Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>The_Day_After_Start_One_Year__c</fullName>
        <formula>StartDate__c + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>The Day After Start One Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Split_Payment__c</fullName>
        <label>Total Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted vehicle order VS</fullName>
                </value>
                <value>
                    <fullName>Demo Bokking Approval</fullName>
                </value>
                <value>
                    <fullName>Acquisition/cold call</fullName>
                </value>
                <value>
                    <fullName>Acquisition visit</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Birthday card</fullName>
                </value>
                <value>
                    <fullName>Car anniversary 1</fullName>
                </value>
                <value>
                    <fullName>Car anniversary 2</fullName>
                </value>
                <value>
                    <fullName>Car anniversary 3</fullName>
                </value>
                <value>
                    <fullName>Customer complaint - staff</fullName>
                </value>
                <value>
                    <fullName>Customer complaint - product</fullName>
                </value>
                <value>
                    <fullName>Customer complaint - dealer</fullName>
                </value>
                <value>
                    <fullName>Customer complaint - other</fullName>
                </value>
                <value>
                    <fullName>Confirmed vehicle order</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction Invtgn 2</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction Invtgn 3</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction Invtgn</fullName>
                </value>
                <value>
                    <fullName>Vehicle delivery</fullName>
                </value>
                <value>
                    <fullName>Test drive</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Vehicle enquiry</fullName>
                </value>
                <value>
                    <fullName>Aftersales estimate</fullName>
                </value>
                <value>
                    <fullName>Invoice New Vehicle</fullName>
                </value>
                <value>
                    <fullName>New vehicle lost sale letter</fullName>
                </value>
                <value>
                    <fullName>Incoming letter</fullName>
                </value>
                <value>
                    <fullName>Campaign Letter</fullName>
                </value>
                <value>
                    <fullName>Lost sale - new</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz Magazine</fullName>
                </value>
                <value>
                    <fullName>MPC Contact Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriter_ID__c</fullName>
        <label>Underwriter ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <label>Underwriter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN_Link__c</fullName>
        <formula>Related_Vehicle__r.UsVIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Registration_No__c</fullName>
        <label>Vehicle Registration No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Status__c</fullName>
        <formula>TEXT(Related_Vehicle__r.VehicleStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voluntary_Insurance_Company__c</fullName>
        <label>Voluntary Insurance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voluntary_Insurance_Premium_Dealer__c</fullName>
        <formula>IF( ISPICKVAL(Voluntary_Insurance_Type__c, &apos;Yes (DIS)&apos;) , Voluntary_Insurance_Premium__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voluntary Insurance Premium(Dealer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voluntary_Insurance_Premium__c</fullName>
        <label>Voluntary Insurance Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voluntary_Insurance_Type__c</fullName>
        <label>Voluntary Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes (Dealer)</fullName>
                </value>
                <value>
                    <fullName>Yes (DIS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Welcome_Call_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Call Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X150_Days_Before_EOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>*150 Days Before EOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>livetime__c</fullName>
        <formula>(year(EndDate__c) - year( StartDate__c)) * 12 + month(EndDate__c) - month( StartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>livetime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Retail Task</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>ContractNumber__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>VIN__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MBF_Contract_Administration_CA_Team_Retail_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>MBF Contract Administration (CA) Team</label>
        <queue>MBF_Contract_Administration_CA_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBF_Customer_Care_CCC_Team_Retail_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>MBF Customer Care (CCC) Team</label>
        <queue>MBF_Customer_Care_CCC_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBF_Inbound_Outbound_Supervisor_Retail_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>MBF Inbound &amp; Outbound Supervisor</label>
        <queue>MBF_Inbound_Outbound_Supervisor</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBF_Quotation_Team_Queue_Retail_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>MBF Quotation Team Queue</label>
        <queue>MBF_Quotation_Team_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RetailActivity</fullName>
        <columns>NAME</columns>
        <columns>Related_Dealer__c</columns>
        <columns>ContractNumber__c</columns>
        <columns>Created_By_EP_Transaction__c</columns>
        <columns>Updated_By_EP_Transactions__c</columns>
        <columns>Description__c</columns>
        <columns>Purchase_Month__c</columns>
        <columns>Purchase_Year__c</columns>
        <columns>Retail_Employee_Activity__c</columns>
        <columns>Retail_LastModifiedDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Selling_Dealer__c</columns>
        <columns>Related_Contact__c</columns>
        <columns>Retail_Id__c</columns>
        <columns>Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Retail_Task__c.Retail_Activity</value>
        </filters>
        <label>RetailActivity</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RetailTaskALL</fullName>
        <columns>NAME</columns>
        <columns>ContractNumber__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>VIN__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service</fullName>
        <columns>Service_Number__c</columns>
        <columns>Service_Code__c</columns>
        <columns>Related_Contact__c</columns>
        <columns>Related_Vehicle__c</columns>
        <columns>Related_Dealer__c</columns>
        <columns>Service_Position__c</columns>
        <columns>NAME</columns>
        <columns>Service_Invoice_Number__c</columns>
        <columns>Retail_LastModifiedDate__c</columns>
        <columns>Follow_Up_Type__c</columns>
        <columns>Group__c</columns>
        <columns>Retail_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Retail_Task__c.Service</value>
        </filters>
        <label>Service</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>contract</fullName>
        <columns>NAME</columns>
        <columns>ContractNumber__c</columns>
        <columns>Created_By_EP_Transaction__c</columns>
        <columns>Description__c</columns>
        <columns>Purchase_Month__c</columns>
        <columns>Purchase_Year__c</columns>
        <columns>Retail_Employee_Activity__c</columns>
        <columns>Retail_LastModifiedDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Selling_Dealer__c</columns>
        <columns>Updated_By_EP_Transactions__c</columns>
        <columns>VIN__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Related_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Retail_Task__c.Contract</value>
        </filters>
        <label>Contract</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Tasks</pluralLabel>
    <recordTypes>
        <fullName>Contract</fullName>
        <active>true</active>
        <label>Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Insurance_Contract</fullName>
        <active>true</active>
        <label>Insurance Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lease_Contract</fullName>
        <active>true</active>
        <label>Lease Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan_Contract</fullName>
        <active>true</active>
        <label>Loan Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_Activity</fullName>
        <active>true</active>
        <label>Retail Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <label>Service</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Contract_Share__c</fullName>
        <label>Contract Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Retail_Activity_Share__c</fullName>
        <label>Retail Activity Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Service_Share__c</fullName>
        <label>Service Share</label>
    </sharingReasons>
</CustomObject>